<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediCare</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot">
        <u>Forgot?</u>
    </string>
    <string name="button_login">Login</string>
    <string name="button_emergency">Emergency</string>
    <string name="action_bar">MediCare</string>
    <string name="footer_text">www.medicare.com</string>
    <string name="button_myaccount">My Account</string>
    <string name="button_medicalissue">Medical Issue</string>
    <string name="button_appointments">Appointments</string>
    <string name="button_about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_appointment">AppointmentActivity</string>
    <string name="title_activity_forgot">Forgot Password</string>
    
    <string name="hospital_prompt">Choose your hospital</string>
    <string name="doctor_prompt">Choose your doctor</string>
    
    <string-array name="hospital_array">
        <item>Hospital D. Pedro</item>
        <item>Hospital Cliria Aveiro</item>
    </string-array>
    
    <string-array name="doctor_array">
        <item>Dr. Pedro</item>
        <item>Dr. Ana</item>
    </string-array>

</resources>