<?xml version="1.0" encoding="UTF-8"?>
<com.medicare.DashboardLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="#f8f9fe" >

    <Button
        android:id="@+id/btn_myaccount"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_myaccount"
        android:text="@string/button_myaccount" 
        android:onClick="myAccount" />
    
    <Button
        android:id="@+id/btn_medical_issue"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_medical_issue"
        android:text="@string/button_medicalissue" 
        android:onClick="medicalIssue" />
    
    <Button
        android:id="@+id/btn_appointments"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_appointments"
        android:text="@string/button_appointments"
    	android:onClick="appointment" />
    
    
    <Button
        android:id="@+id/btn_about"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_about"
        android:text="@string/button_about"
    	android:onClick="about" />
     
</com.medicare.DashboardLayout>
